tests/errors/types/type-no-such-member-non-generic.fn
---
Description: Type member access in type position where the member does not exist
Expected: FN3203
---

type Foo
{
    x: i32
    init{}
}

type Program
{
    static fn Main -> i32
    {
        var a: Foo.Bar = 5
        return 0
    }
}
